2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: added libglade dependency
	* data/Makefile.am: added glade file
	* data/qalculate.glade: user interface definition
	* src/callbacks.cc: removed the extern GtkWidget *window
	* src/interface.cc: started migration to glade
	* src/interface.h: started migration to glade
	* src/main.cc: started migration to glade

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* .cvsignore: cvs update has less warnings now
	* configure.in: added de to ALL_LINGUAS
	* data/qalculate.desktop.in: fixed the starter
	* po/.cvsignore: cvs update has less warnings now
	* po/de.po: updated german translation

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* data/Makefile.am: added fixes for kde pre-3.2 (aka stable)

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* .cvsignore: cvs update has less warnings now
	* configure.in: some beautification (will fix -Wall later this day)
	* data/.cvsignore: cvs update has less warnings now
	* data/Makefile.am: added desktop file
	* data/qalculate.desktop.in: desktop file template
	* po/.cvsignore: cvs update has less warnings now
	* po/POTFILES.in: added data/qalculate.desktop
	* po/de.po: added german translation

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* src/main.cc: some beautification
	* src/main.h: made enums from #defines (are the values relevant?)

2003-08-06  Niklas Knutsson  <nq@altern.org>

	* Removed some debug output
	* Fix (x+y)^5, but unfortunately not (x+y)^6...
	* Even better unit conversion.
	* Change Ctrl+V to Ctrl+M for manage variables

2003-08-06  Sven Herzberg  <herzi@gnome-de.org>

	* Makefile.am: make dist works now
	* configure.in: added data/Makefile.am
	* data/.cvsignore: cvs update has less warnings now
	* data/Makefile.am: make dist works now, make install too
	* po/.cvsignore: cvs update has less warnings now

2003-08-06  Sven Herzberg  <herzi@gnome-de.org>

	* .cvsignore: cvs update has less warnings now
	* Makefile.am: added data as subdir